--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body{
-  background-color: white;
+  background-color: #161617;
   font-size:12px;
   margin: 40px 80px;
-  color: #17171b;
+  color: white;
   font-family: 'Playfair Display',sans-serif;
 }
 
@@ -29,6 +29,8 @@ body{
 .pic-item{
   margin: 24px;
   transition: 1200ms cubic-bezier(0.03, 0.98, 0.52, 0.99);
+  padding-right: 0rem !important;
+  padding-left: 0rem !important;
 }
 
 .pic-item img{
@@ -45,34 +47,52 @@ body{
   flex-grow: 1;
 }
 
-
-.Buttons{
-
-}
-
 .row{
   width: 98% !important;
+}
+
+.Nav{
+    font-family: 'Ubuntu Mono', monospace;
+    font-size: 12px;
+    display: block;
+    z-index: 10;
+    padding: 12px 24px;
+    border-bottom: 1px solid white;
+    height:12px;
+}
+
+
+.Nav a{
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  letter-spacing: .3pt;
+  padding-left: 8px;
+}
+
+.Nav a:hover{
+  text-decoration: underline;
 }
 
 
 .Buttons button{
   font-family: 'Ubuntu Mono', monospace;
-  background-color: transparent;
   border-style: solid;
   border-color:black;
-  border-width: 2px;
+  border-width: 3px;
   border-left: none;
   border-right: none;
   border-bottom: none;
   font-size: 16px;
   line-height: 1.4em;
-  color: black;
   text-align: right;
   letter-spacing: .4pt;
   outline: 0;
   padding: 16px;
   text-align: center;
   width: 50%;
+  background-color: rgba(0, 0, 0, .2);
+  color: white;
 }
 
 
@@ -100,45 +120,30 @@ button:hover{
 }
 
 
-.Nav{
-    font-family: 'Ubuntu Mono', monospace;
-    font-size: 12px;
-    display: block;
-    z-index: 10;
-    padding: 12px 24px;
-    border-bottom: 1px solid black;
-    height:12px;
-}
-
-
-.Nav a{
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #17171b;
-  letter-spacing: .3pt;
-  padding-left: 8px;
-}
-
-.Nav a:hover{
-  text-decoration: underline;
-}
-
-
-
-
-
-button:focus{
-}
-
 .Copy{
-  color:#17171b;
-  border: 2px solid black;
+  background-color: rgba(0, 0, 0, .8);
+  color: white;
+  border: 3px solid black;
   z-index: 1;
   /*box-shadow: 2px 2px 40px 2px rgba(0,0,0,.1);*/
   font-family: 'Ubuntu Mono', monospace;
-      padding: 0px !important;
+  padding: 0px !important;
 }
 
+.End{
+  background-color: black !important;
+  color: white !important;
+  text-align: center !important;
+}
+
+.End p:hover{
+  background-color: black !important;
+}
+
+.End .Title{
+  background-color: #E0391B !important;
+  color: white !important;
+}
 
 .Title{
   font-family: 'Ubuntu Mono', monospace;
@@ -164,21 +169,13 @@ button:focus{
   -webkit-margin-before: 0px;
 }
 
+/*
 .Copy p:hover{
-  background-color:rgba(255,255,255,.6);
+  background-color:rgba(255,255,255,.8);
   -webkit-transition: background-color 300ms linear;
   -ms-transition: background-color 300ms linear;
   transition: background-color 300ms linear;
-}
-
-.box{
-  width:100px;
-  height:100px;
-  background-color:pink;
-}
-
-
-
+}*/
 
 
 
