--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,8 @@ body{
 
 .row{
   width: 98% !important;
+  margin-left: 0em !important;
+  margin-right: 0em !important;
 }
 
 .Nav{
@@ -59,23 +61,28 @@ body{
     padding: 12px 24px;
     border-bottom: 1px solid white;
     height:12px;
+    text-transform: uppercase;
 }
 
 
 .Nav a{
-  text-transform: uppercase;
   text-decoration: none;
   color: white;
   letter-spacing: .3pt;
   padding-left: 8px;
+  cursor: pointer;
 }
 
 .Nav a:hover{
   text-decoration: underline;
 }
 
+#Buttons{
+  background-color: red;
+}
 
-.Buttons a{
+
+#Buttons a{
   font-family: 'Ubuntu Mono', monospace;
   border-style: solid;
   border-color:black;
@@ -98,7 +105,7 @@ body{
 }
 
 
-.Buttons a:hover{
+#Buttons a:hover{
   cursor: pointer;
   outline: 0;
   background-color: #E0391B;
