--- a/src/App.css
+++ b/src/App.css
@@ -28,18 +28,16 @@ body{
 
 .pic-item{
   margin: 24px;
-  transition: 1200ms cubic-bezier(0.03, 0.98, 0.52, 0.99);
-  padding-right: 0rem !important;
-  padding-left: 0rem !important;
+  transition: 1.2s;
+  padding-right: 0!important;
+  padding-left: 0!important;
 }
 
 .pic-item img{
   width: 100%;
   height: auto;
-  box-shadow: #dedcd6 12px 12px 0px;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
-  /*border: 4px solid black;*/
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .Pics li:first-child{
@@ -48,9 +46,7 @@ body{
 }
 
 .row{
-  width: 98% !important;
-  margin-left: 0em !important;
-  margin-right: 0em !important;
+
 }
 
 .Nav{
@@ -78,46 +74,42 @@ body{
 }
 
 #Buttons{
-  background-color: red;
+  background-color: blue;
 }
 
 
 #Buttons a{
-  font-family: 'Ubuntu Mono', monospace;
-  border-style: solid;
-  border-color:black;
-  border-width: 3px;
+  font-family: Ubuntu Mono,monospace;
   border-left: none;
   border-right: none;
   border-bottom: none;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.4em;
-  text-align: right;
   letter-spacing: .4pt;
   outline: 0;
-  padding: 16px;
+  padding: 16px 0;
   text-align: center;
-  width: 41%;
-  background-color: rgba(0, 0, 0, .2);
-  color: white;
-  display:block;
-  text-decoration:none;
+  width: 50%;
+  background-color: rgba(0,0,0,.2);
+  color: #fff;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 
 #Buttons a:hover{
   cursor: pointer;
   outline: 0;
-  background-color: #E0391B;
-  color: white;
-  -webkit-transition: background-color 300ms linear;
-  -ms-transition: background-color 300ms linear;
-  transition: background-color 300ms linear;
+  background-color: #3860f0;
+  color: #fff;
+  transition: background-color .3s linear;
+  font-weight: 400;
 }
+
 
 .lowopacity{
   float:left;
-  border-right: 2px solid black !important;
 }
 
 .left{
@@ -137,6 +129,7 @@ body{
   /*box-shadow: 2px 2px 40px 2px rgba(0,0,0,.1);*/
   font-family: 'Ubuntu Mono', monospace;
   padding: 0px !important;
+  text-align: center;
 }
 
 .End{
@@ -171,11 +164,12 @@ body{
 
 
 .Copy p{
-  padding: 24px;
-  font-size: 18px;
+  padding: 32px;
+  font-size: 16px;
   line-height: 1.6em;
-  -webkit-margin-after: 0px;
-  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0;
+  -webkit-margin-before: 0;
+  font-weight: 400;
 }
 
 /*
@@ -242,12 +236,36 @@ body{
 }
 
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 500px) {
 
-  .Logo a{
-      transform: rotate(0deg);
-      padding: 32px;
-      top:0px;
+  .row.z-2{
+    position: absolute;
+    top: 35%;
+    width: 90%;
+
     }
+
+  .row.z-1{
+    margin-left: -150px;
+    display: -webkit-box !important;
+  }
+
+  .Copy p{
+    padding: 24px;
+    font-size: 14px;
+    line-height: 1.6em;
+    -webkit-margin-after: 0;
+    -webkit-margin-before: 0;
+    font-weight: 400;
+  }
+
+  .pic-item{
+    transition: 1.2s cubic-bezier(.03,.98,.52,.99);
+    padding-right: 0!important;
+    padding-left: 0!important;
+    margin-left: -180px;
+    margin: 0px;
+  }
+
 
 }
