--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body{
   font-size:12px;
   margin: 40px 80px;
   color: white;
-  font-family: 'Playfair Display',sans-serif;
+  font-family: 'Inconsolata', monospace;
 }
 
 .Scene{
@@ -50,12 +50,12 @@ body{
 }
 
 .Nav{
-    font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Inconsolata', monospace;
     font-size: 12px;
     display: block;
     z-index: 10;
     padding: 12px 24px;
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
     height:12px;
     text-transform: uppercase;
 }
@@ -74,18 +74,18 @@ body{
 }
 
 #Buttons{
+  border-top: 2px solid white;
   background-color: blue;
 }
 
 
 #Buttons a{
-  font-family: Ubuntu Mono,monospace;
-  border-left: none;
-  border-right: none;
+  font-family: 'Inconsolata', monospace;
   border-bottom: none;
+  font-weight: 800;
   font-size: 14px;
   line-height: 1.4em;
-  letter-spacing: .4pt;
+  letter-spacing: .8pt;
   outline: 0;
   padding: 16px 0;
   text-align: center;
@@ -100,16 +100,16 @@ body{
 
 #Buttons a:hover{
   cursor: pointer;
+  text-decoration: underline;
   outline: 0;
-  background-color: #3860f0;
-  color: #fff;
-  transition: background-color .3s linear;
   font-weight: 400;
 }
 
 
 .lowopacity{
   float:left;
+  border-right: 2px solid white;
+  width: 49% !important;
 }
 
 .left{
@@ -124,18 +124,17 @@ body{
 .Copy{
   background-color: rgba(0, 0, 0, .8);
   color: white;
-  border: 3px solid black;
+  border: 2px solid white;
   z-index: 1;
   /*box-shadow: 2px 2px 40px 2px rgba(0,0,0,.1);*/
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Inconsolata', monospace;
   padding: 0px !important;
-  text-align: center;
+  text-align: left;
 }
 
 .End{
   background-color: black !important;
   color: white !important;
-  text-align: center !important;
 }
 
 .End p:hover{
@@ -148,25 +147,26 @@ body{
 }
 
 .Title{
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Inconsoloata',monospace;
   color: #211b10;
   /* background-color: #211b10; */
-  font-size: 16px;
-  text-align: center;
+  font-size: 14px;
+  text-align: left;
   display: block;
-  padding: 16px 0px;
+  padding: 16px 32px;
   background-color: #F0C838;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid white;
   cursor: crosshair;
   font-weight: bold;
   line-height: 1.2em;
+  text-transform: uppercase;
 }
 
 
 .Copy p{
   padding: 32px;
-  font-size: 16px;
-  line-height: 1.6em;
+  font-size: 18px;
+  line-height: 1.8em;
   -webkit-margin-after: 0;
   -webkit-margin-before: 0;
   font-weight: 400;
