--- a/src/App.css
+++ b/src/App.css
@@ -242,16 +242,22 @@ body{
     overflow-x: hidden;
   }
 
+  .Nav{
+    padding: 16px;
+  }
+
   .row.z-2{
     position: absolute;
     top: 30%;
-    width: 90%;
-
+    width: 85%;
+    padding-bottom: 100px;
     }
+
 
   .row.z-1{
     margin-left: -150px;
     display: -webkit-box !important;
+    width: 90%;
   }
 
   .Copy p{
